--- a/index.html
+++ b/index.html
@@ -133,5 +133,12 @@
             document.getElementById("days").innerHTML = days + " Hari";
         }, 1000);
     </script>
+<div>
+    <p>POSONAN BALEK YO!</p>
+    <a href="https://www.instagram.com/umarhamdan_a/"><img src="https://i.ibb.co/GJQLx7r/instagram-logo.png" alt="Instagram" style="width: 50px; height: 50px; opacity: 0.8;"></a>
+    <a href="https://wa.me/62859106771139"><img src="https://i.ibb.co/fH3g5XW/whatsapp-logo.png" alt="WhatsApp" style="width: 50px; height: 50px; opacity: 0.8;"></a>
+    <a href="https://t.me/AFHIMNA"><img src="https://i.ibb.co/2tMtmy1/telegram-logo.png" alt="Telegram" style="width: 50px; height: 50px;"></a>
+    <p>this website is created by foztoro© .</p>
+</div>
 </body>
 </html>
