--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
     <button id="days">Days</button>
 
     <script>
-        var countdownDate = new Date("March 11, 2024 17:49:00 GMT+0000").getTime();
+        // Menggunakan waktu Waktu Indonesia Barat (WIB) atau GMT+0700
+        var countdownDate = new Date(); // Ambil tanggal dan waktu saat ini
+        countdownDate.setHours(17, 49, 0, 0); // Atur jam, menit, detik, dan milidetik
 
         var x = setInterval(function() {
             var now = new Date().getTime();
@@ -133,12 +135,13 @@
             document.getElementById("days").innerHTML = days + " Hari";
         }, 1000);
     </script>
-<div>
-    <p>POSONAN BALEK YO!</p>
-    <a href="https://www.instagram.com/umarhamdan_a/"><img src="https://i.ibb.co/GJQLx7r/instagram-logo.png" alt="Instagram" style="width: 50px; height: 50px; opacity: 0.8;"></a>
-    <a href="https://wa.me/62859106771139"><img src="https://i.ibb.co/fH3g5XW/whatsapp-logo.png" alt="WhatsApp" style="width: 50px; height: 50px; opacity: 0.8;"></a>
-    <a href="https://t.me/AFHIMNA"><img src="https://i.ibb.co/2tMtmy1/telegram-logo.png" alt="Telegram" style="width: 50px; height: 50px;"></a>
-    <p>this website is created by foztoro© .</p>
-</div>
+
+    <div>
+        <p>POSONAN BALEK YO!</p>
+        <a href="https://www.instagram.com/umarhamdan_a/"><img src="https://i.ibb.co/GJQLx7r/instagram-logo.png" alt="Instagram" style="width: 50px; height: 50px; opacity: 0.8;"></a>
+        <a href="https://wa.me/62859106771139"><img src="https://i.ibb.co/fH3g5XW/whatsapp-logo.png" alt="WhatsApp" style="width: 50px; height: 50px; opacity: 0.8;"></a>
+        <a href="https://t.me/AFHIMNA"><img src="https://i.ibb.co/2tMtmy1/telegram-logo.png" alt="Telegram" style="width: 50px; height: 50px;"></a>
+        <p>this website is created by foztoro© .</p>
+    </div>
 </body>
 </html>
