--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ramadlan tiba</title>
+    <title>Lebaran tiba</title>
     <style>
     body {
             font-family: 'Arial', sans-serif;
@@ -94,7 +94,7 @@
     </style>
 </head>
 <body>
-    <h2>PERKIRAAN BULAN RAMADLAN</h2>
+    <h2>PERKIRAAN LEBARAN</h2>
 
     <div id="countdown-container">
         <div class="countdown-box" id="hours">
@@ -137,7 +137,7 @@
     </script>
 
     <div>
-        <p>POSONAN BALEK YO!</p>
+        <p>SUDAH HATAM ALQUR'AN BERAPA KALI?</p>
         <a href="https://www.instagram.com/umarhamdan_a/"><img src="https://i.ibb.co/GJQLx7r/instagram-logo.png" alt="Instagram" style="width: 50px; height: 50px; opacity: 0.8;"></a>
         <a href="https://wa.me/62859106771139"><img src="https://i.ibb.co/fH3g5XW/whatsapp-logo.png" alt="WhatsApp" style="width: 50px; height: 50px; opacity: 0.8;"></a>
         <a href="https://t.me/AFHIMNA"><img src="https://i.ibb.co/2tMtmy1/telegram-logo.png" alt="Telegram" style="width: 50px; height: 50px;"></a>
